fix: [PL-20548]: center aligned placeholder for tags

--- a/src/components/FormikForm/FormikForm.css
+++ b/src/components/FormikForm/FormikForm.css
@@ -80,7 +80,7 @@
       }
 
       .bp3-tag-input-values {
-        margin: 1px 7px 2px 1px !important;
+        margin: 2px 7px 0 1px !important;
       }
     }
 
